fixes on test configuration